# svd_converter

./: .gitmodules  CMakeLists.txt  README.md  inja.patch
src/: fmt_wrapper.hpp  inja_wrapper.hpp  main.cpp  svd_parser.hpp  svd_types.hpp
src/generator_templates/: custom.hpp  kvasir_bit.hpp
